--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "crates/sui",
     "crates/sui-adapter",
     "crates/sui-adapter-transactional-tests",
+    "crates/sui-archival",
     "crates/sui-benchmark",
     "crates/sui-cluster-test",
     "crates/sui-config",
