Basic fail point implementation + test case with crashes after writes

--- a/crates/sui-macros/Cargo.toml
+++ b/crates/sui-macros/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 [dependencies]
 sui-proc-macros = { path = "../sui-proc-macros" }
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
+once_cell = "1.16"
