--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -18,6 +18,7 @@ tempfile = "3.3.0"
 tokio = { workspace = true, features = ["full"] }
 strum = "0.24.1"
 strum_macros = "0.24.3"
+once_cell = "1.15.0"
 num_cpus = "1.14.0"
 rocksdb = "0.19.0"
 serde_with = { version = "2.1.0", features = ["hex"] }
