--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -31,7 +31,7 @@
     "test:unit": "vitest run unit",
     "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
     "test:e2e:nowait": "vitest run e2e",
-    "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && RUST_LOG=info,sui=debug,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
+    "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && RUST_LOG=info,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
     "lint": "eslint './{src,test}/**.{ts,js}'",
     "prepublishOnly": "pnpm build",
     "size": "size-limit",
