--- a/sdk/wallet-adapter/wallet-kit/package.json
+++ b/sdk/wallet-adapter/wallet-kit/package.json
@@ -36,6 +36,7 @@
     "@mysten/wallet-adapter-unsafe-burner": "workspace:*",
     "@mysten/wallet-adapter-wallet-standard": "workspace:*",
     "@mysten/wallet-kit-core": "workspace:*",
+    "@mysten/wallet-standard": "workspace:*",
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
