--- a/sdk/wallet-adapter/wallet-kit/tsconfig.json
+++ b/sdk/wallet-adapter/wallet-kit/tsconfig.json
@@ -9,6 +9,7 @@
   "references": [
     { "path": "../../typescript" },
     { "path": "../wallet-kit-core" },
+    { "path": "../wallet-standard" },
     { "path": "../adapters/base-adapter" },
     { "path": "../adapters/wallet-standard-adapter" },
     { "path": "../adapters/unsafe-burner" },
