[frenemies] adds timer + refresh button + better gas management (#7680)

--- a/dapps/frenemies/.env.example
+++ b/dapps/frenemies/.env.example
@@ -11,3 +11,6 @@ VITE_LEADERBOARD=
 
 # rpc to use (default http://localhost:9000/)
 VITE_NETWORK=
+
+# length of the epoch in minutes
+VITE_EPOCH_LEN=1440
