move: resolve function names for vm errors

--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -41,6 +41,7 @@ move-command-line-common.workspace = true
 move-core-types.workspace = true
 move-disassembler.workspace = true
 move-ir-types.workspace = true
+move-vm-runtime.workspace = true
 move-vm-types.workspace = true
 
 narwhal-config = { path = "../../narwhal/config" }
