--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -271,6 +271,8 @@ MoveLocation:
         TYPENAME: ModuleId
     - function: U16
     - instruction: U16
+    - function_name:
+        OPTION: STR
 MoveModulePublish:
   STRUCT:
     - modules:
