--- a/crates/sui-config/data/fullnode-template-with-path.yaml
+++ b/crates/sui-config/data/fullnode-template-with-path.yaml
@@ -10,6 +10,14 @@ enable-event-processing: true
 genesis:
   # Update this to the location of where the genesis file is stored
   genesis-file-location: "genesis.blob"
+
+authority-store-pruning-config:
+  objects-num-latest-versions-to-retain: 5
+  objects-pruning-period-secs: 86400
+  objects-pruning-initial-delay-secs: 3600
+  num-latest-epoch-dbs-to-retain: 3
+  epoch-db-pruning-period-secs: 3600
+
 protocol-key-pair:
   path: "protocol.key"
 network-key-pair: 
