metrics: move the uptime metric to mysten-metrics
Move the uptime metric to mysten-metrics crate as well as require that
the version used for the `version` label is supplied explicitly instead
of implicitly.

--- a/crates/mysten-metrics/Cargo.toml
+++ b/crates/mysten-metrics/Cargo.toml
@@ -16,3 +16,5 @@ tokio = { workspace = true }
 tap = "1.0"
 dashmap = "5.4.0"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng"]}
+
+prometheus-closure-metric = { path = "../prometheus-closure-metric" }
