--- a/crates/sui-node/Cargo.toml
+++ b/crates/sui-node/Cargo.toml
@@ -21,6 +21,8 @@ parking_lot = "0.12.1"
 futures = "0.3.23"
 chrono = "0.4.23"
 tower = "0.4.13"
+git-version = "0.3.5"
+const-str = "0.5.3"
 
 sui-config = { path = "../sui-config" }
 sui-core = { path = "../sui-core" }
