move: resolve function names for vm errors (#7306)

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -273,6 +273,8 @@ MoveLocation:
         TYPENAME: ModuleId
     - function: U16
     - instruction: U16
+    - function_name:
+        OPTION: STR
 MoveModulePublish:
   STRUCT:
     - modules:
