sui: always have an accurate git-revision
Instead of relying on a build script we can use a proc-macro to ensure
that we're always getting the most accurate value for the git revision
that the sui binary was built from.

--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -21,6 +21,8 @@ bcs = "0.1.4"
 clap = { version = "3.2.17", features = ["derive"] }
 bip32 = "0.4.0"
 prettytable-rs = "0.10.0"
+git-version = "0.3.5"
+const-str = "0.5.3"
 
 sui-core = { path = "../sui-core" }
 sui-framework = { path = "../sui-framework" }
