--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,6 +16,7 @@ jobs:
         uses: "./.github/actions/diffs"
         id: diff
 
+  # Run e2e test against localnet built on the main branch
   localnet:
     name: Localnet
     needs: diff
@@ -64,4 +65,52 @@ jobs:
         with:
           name: playwright-report-wallet
           path: apps/wallet/playwright-report/
+          retention-days: 30
+
+  # Run e2e test against localnet built on the devnet branch for backward compatibility check
+  local_devnet_branch:
+    name: Local Network Built on devnet branch
+    needs: diff
+    if: needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true' || needs.diff.outputs.isWallet == 'true'
+    runs-on: ubuntu-ghcloud
+    steps:
+      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
+        with:
+          ref: devnet
+      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # pin@v1
+      - uses: bmwill/rust-cache@v1 # Fork of 'Swatinem/rust-cache' which allows caching additional paths
+      - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # pin@v2.2.4
+        with:
+          version: 7
+      - run: cargo build --bin sui-test-validator --bin sui --profile dev
+      - name: Install Nodejs
+        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
+        with:
+          node-version: "18"
+          cache: "pnpm"
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Install Playwright Browsers
+        run: pnpm explorer playwright install --with-deps chromium
+
+      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
+        with:
+          clean: false
+
+      # - name: Run TS SDK e2e tests
+      #   if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
+      #   run: pnpm dlx concurrently --kill-others --success command-1 'RUST_LOG="consensus=off"  target/debug/sui-test-validator' 'pnpm sdk test:e2e'
+
+      - name: Set env
+        run: echo "E2E_RUN_LOCAL_NET_CMD=(RUST_LOG="consensus=off "$(echo $PWD/target/debug/sui-test-validator))" >> $GITHUB_ENV
+
+      - name: Run Explorer e2e tests
+        if: ${{ needs.diff.outputs.isExplorer == 'true' }}
+        run: pnpm explorer playwright test
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report-explorer
+          path: apps/explorer/playwright-report/
           retention-days: 30
