--- a/crates/sui-framework-build/Cargo.toml
+++ b/crates/sui-framework-build/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 anyhow = { version = "1.0.64", features = ["backtrace"] }
 fastcrypto = { workspace = true }
 once_cell = "1.16"
+tempfile = "3.3.0"
 
 serde-reflection = "0.3.6"
 sui-types = { path = "../sui-types" }
