Update copyright info

--- a/doc/src/siteconfig.json
+++ b/doc/src/siteconfig.json
@@ -7,7 +7,7 @@
   "organizationName": "Mysten Labs",
   "projectName": "Dev Portal",
   "footerData": {
-    "copyRight": "©2022 Copyright Sui. All rights reserved.",
+    "copyRight": "©2023 Copyright Sui Foundation. All rights reserved.",
     "privacyPolicy": {
       "label": "Privacy Policy",
       "link": "https://sui.io/policy/"
