--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,7 @@ jobs:
     runs-on: [ubuntu-latest]
     outputs:
       isRust: ${{ steps.diff.outputs.isRust }}
+      isMove: ${{ steps.diff.outputs.isMove }}
     steps:
       - uses: actions/checkout@v3
       - name: Detect Changes
@@ -161,7 +162,7 @@ jobs:
 
       - name: Start local Sui network
         run: |
-          sui start --no-full-node &
+          cargo run --bin sui start --no-full-node &
         shell: bash
 
       - name: Start Rosetta servers
@@ -248,3 +249,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: EmbarkStudios/cargo-deny-action@v1
+
+  move-prover:
+    name: move-prover
+    needs: diff
+    if: needs.diff.outputs.isMove == 'true'
+    runs-on: [ubuntu-ghcloud]
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+      
+      - name: Prover Setup
+        run: |
+          crates/sui/scripts/prover_setup.sh
+      - name: Build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+
+      - name: Prover Run
+        working-directory: crates/sui-framework
+        run: |
+          set -o pipefail
+          DOTNET_ROOT="$HOME/.dotnet"
+          BIN_DIR="$HOME/bin"
+          export DOTNET_ROOT="${DOTNET_ROOT}"
+          export PATH="${DOTNET_ROOT}/tools:\$PATH"
+          export Z3_EXE="${BIN_DIR}/z3"
+          export CVC5_EXE="${BIN_DIR}/cvc5"
+          export BOOGIE_EXE="${DOTNET_ROOT}/tools/boogie"
+          /home/runner/.cargo/bin/cargo run -p sui -- move prove
