--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -253,14 +253,11 @@ jobs:
   move-prover:
     name: move-prover
     needs: diff
+    timeout-minutes: 20
     if: needs.diff.outputs.isMove == 'true'
     runs-on: [ubuntu-ghcloud]
 
-    steps:
-      - name: Sleep for 20 minutes
-        run: sleep 1200
-        shell: bash
-      
+    steps:     
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
       
