--- a/crates/sui-network/Cargo.toml
+++ b/crates/sui-network/Cargo.toml
@@ -18,6 +18,7 @@ sui-types = { path = "../sui-types" }
 sui-config = { path = "../sui-config" }
 
 mysten-network.workspace = true
+
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
 tokio = { workspace = true, features = ["full"] }
 tracing = "0.1.37"
@@ -27,6 +28,7 @@ tap = "1.0.1"
 rand = "0.8.5"
 anyhow = "1.0.65"
 prometheus = "0.13.3"
+mysten-metrics = { path = "../mysten-metrics" }
 
 [build-dependencies]
 anemo-build.workspace = true
