--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -24,6 +24,7 @@ prettytable-rs = "0.10.0"
 git-version = "0.3.5"
 const-str = "0.5.3"
 
+sui-adapter = { path = "../sui-adapter" }
 sui-core = { path = "../sui-core" }
 sui-framework = { path = "../sui-framework" }
 sui-framework-build = { path = "../sui-framework-build" }
