--- a/crates/sui-tool/Cargo.toml
+++ b/crates/sui-tool/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+anemo.workspace = true
 anyhow = { version = "1.0.64", features = ["backtrace"] }
 tokio = { workspace = true, features = ["full"] }
 tracing = "0.1.36"
