--- a/crates/mysten-metrics/Cargo.toml
+++ b/crates/mysten-metrics/Cargo.toml
@@ -12,6 +12,7 @@ tracing = "0.1"
 scopeguard = "1"
 prometheus = "0.13"
 once_cell = "1"
+tokio = { workspace = true }
 tap = "1.0"
 tokio.workspace = true
 dashmap = "5.4.0"
