--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -28,7 +28,7 @@ zeroize = "1.5.7"
 schemars ="0.8.10"
 tap = "1.0.1"
 tonic = "0.8"
-strum = "^0.24"
+strum = { version = "^0.24", features = ["derive"] }
 strum_macros = "^0.24"
 roaring = "0.10.1"
 enum_dispatch = "^0.3"
@@ -61,4 +61,3 @@ derive_more = "0.99.17"
 
 [dev-dependencies]
 bincode = "1.3.3"
-test-utils = { path = "../test-utils" }
