types: implement TransactionEffectsDigest in term sof Sha3Digest

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -499,7 +499,8 @@ TransactionDigest:
   NEWTYPESTRUCT:
     TYPENAME: Sha3Digest
 TransactionEffectsDigest:
-  NEWTYPESTRUCT: BYTES
+  NEWTYPESTRUCT:
+    TYPENAME: Sha3Digest
 TransactionKind:
   ENUM:
     0:
