--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -62,3 +62,8 @@ derive_more = "0.99.17"
 [dev-dependencies]
 bincode = "1.3.3"
 test-utils = { path = "../test-utils" }
+criterion = { version = "0.4.0", features = ["async", "async_tokio"] }
+
+[[bench]]
+name = "accumulator_bench"
+harness = false
