types: rencode ObjectDigests in base64 until TS sdk can support base58

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -360,8 +360,7 @@ ObjectArg:
           - initial_shared_version:
               TYPENAME: SequenceNumber
 ObjectDigest:
-  NEWTYPESTRUCT:
-    TYPENAME: Sha3Digest
+  NEWTYPESTRUCT: BYTES
 ObjectFormatOptions:
   STRUCT:
     - include_types: BOOL
