Revert "[RWLocks] Temporary add #[serde(skip)] for SharedObject::mutable (#7776)"
This reverts commit cf3ed741c5e326ddc921e60a80ec6047c1d2c49c.

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -359,6 +359,7 @@ ObjectArg:
               TYPENAME: ObjectID
           - initial_shared_version:
               TYPENAME: SequenceNumber
+          - mutable: BOOL
 ObjectDigest:
   NEWTYPESTRUCT: BYTES
 ObjectFormatOptions:
