--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -75,6 +75,7 @@ jobs:
     if: needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'
     runs-on: ubuntu-ghcloud
     steps:
+      # checkout the devnet branch
       - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
         with:
           ref: devnet
@@ -84,6 +85,12 @@ jobs:
         with:
           version: 7
       - run: cargo build --bin sui-test-validator --bin sui --profile dev
+
+      # checkout the current branch
+      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
+        with:
+          clean: false
+
       - name: Install Nodejs
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
         with:
@@ -94,16 +101,12 @@ jobs:
       - name: Install Playwright Browsers
         run: pnpm explorer playwright install --with-deps chromium
 
-      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
-        with:
-          clean: false
-
       - name: Set env
         run: echo "E2E_RUN_LOCAL_NET_CMD=(RUST_LOG=\"consensus=off\" $(echo $PWD/target/debug/sui-test-validator))" >> $GITHUB_ENV
 
-      # - name: Run TS SDK e2e tests
-      #   if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
-      #   run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
+      - name: Run TS SDK e2e tests
+        if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
+        run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
 
       - name: Run Explorer e2e tests
         if: ${{ needs.diff.outputs.isExplorer == 'true' }}
@@ -126,6 +129,7 @@ jobs:
     if: needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'
     runs-on: ubuntu-ghcloud
     steps:
+      # checkout the testnet branch
       - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
         with:
           ref: testnet
@@ -135,6 +139,12 @@ jobs:
         with:
           version: 7
       - run: cargo build --bin sui-test-validator --bin sui --profile dev
+
+      # checkout the current branch
+      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
+        with:
+          clean: false
+
       - name: Install Nodejs
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
         with:
@@ -145,16 +155,12 @@ jobs:
       - name: Install Playwright Browsers
         run: pnpm explorer playwright install --with-deps chromium
 
-      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
-        with:
-          clean: false
-
       - name: Set env
         run: echo "E2E_RUN_LOCAL_NET_CMD=(RUST_LOG="consensus=off "$(echo $PWD/target/debug/sui-test-validator))" >> $GITHUB_ENV
 
-      # - name: Run TS SDK e2e tests
-      #   if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
-      #   run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
+      - name: Run TS SDK e2e tests
+        if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
+        run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
 
       - name: Run Explorer e2e tests
         if: ${{ needs.diff.outputs.isExplorer == 'true' }}
