--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -32,6 +32,7 @@
     "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
     "test:e2e:nowait": "vitest run e2e",
     "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && RUST_LOG=info,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
+    "win-prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && set RUST_LOG=info && set sui=error && set anemo_tower=warn && set consensus=off && cargo run --bin sui-test-validator",   
     "lint": "eslint --max-warnings=0 src test",
     "prettier:fix": "prettier --write .",
     "prepublishOnly": "pnpm build",
