--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -44,6 +44,7 @@ sui-sdk = { path = "../sui-sdk" }
 sui-keys = { path = "../sui-keys" }
 sui-node = { path = "../sui-node" }
 sui-json-rpc-types = { path = "../sui-json-rpc-types" }
+sui-protocol-constants = { path = "../sui-protocol-constants" }
 telemetry-subscribers.workspace = true
 
 move-core-types.workspace = true
