Reenable: [objects pruner] live pruner support This reverts commit 711dd7e3a6e94e2c9d09b096af184419bb04cfea.

--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -56,6 +56,7 @@ sysinfo = "0.27.5"
 [target.'cfg(msim)'.dependencies]
 sui-macros = { path = "../sui-macros" }
 sui-simulator = { path = "../sui-simulator" }
+typed-store = { path = "../typed-store" }
 
 [features]
 benchmark = ["narwhal-node/benchmark"]
