[frenemies] code to migrate leaderboard and scorecards

--- a/sui_programmability/examples/old-frenemies/Move.toml
+++ b/sui_programmability/examples/old-frenemies/Move.toml
@@ -1,5 +1,5 @@
 [package]
-name = "frenemies"
+name = "old_frenemies"
 version = "0.0.1"
 
 [dependencies]
@@ -7,4 +7,4 @@ Sui = { local = "../../../crates/sui-framework" }
 #Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 
 [addresses]
-frenemies =  "0x0"
+frenemies = "0xac02d650b50456147c2c055c68acac7c545de0a7"
