--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "clean": "rm -rf tsconfig.tsbuildinfo ./dist",
-    "build": "pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
+    "build": "pnpm genversion --es6 src/version.ts && pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
     "build:types": "tsc --build",
     "doc": "typedoc",
     "test": "pnpm test:unit",
@@ -71,6 +71,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "genversion": "^3.1.1",
     "husky": "^7.0.4",
     "mockttp": "^2.7.0",
     "prettier": "^2.8.1",
